--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,7 @@ $grey-light: #eaeaea;
 $grey-dark: #808080;
 $white: #fff;
 $header-height: 60px;
-$sidebar-width: 300px;
+$sidebar-width: 375px;
 
 // GLOBAL RESET
 *,
@@ -29,3 +29,8 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+li {
+    list-style: none;
+}
+
